--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -78,4 +78,15 @@ andesite {
       nas-buffer = 400
     }
   }
+
+  koe {
+    gateway = v4
+    transport = default
+    byte-buf-allocator = netty-default
+    high-packet-priority = true
+    udp-queue {
+      buffer = 400
+      threads = -1
+    }
+  }
 }
