--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
     koeVersion =               '64b28abee9'
     nettyEpollVersion =        '4.1.52.Final'
     nettyKQueueVersion =       '4.1.52.Final'
-    lavaplayerVersion =        'a63c541dc5'
+    lavaplayerVersion =        '1.3.55'
     lavaplayerNativesVersion = '1.3.13'
     ytRotatorVersion =         '0.1.7'
     lavadspVersion =           '0.6'
