--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ ext {
     lavaplayerVersion =        '1.3.55'
     lavaplayerNativesVersion = '1.3.13'
     ytRotatorVersion =         '0.1.7'
-    lavadspVersion =           '0.6'
+    lavadspVersion =           '0.6.1'
     logbackVersion =           '1.2.3'
     magmaVersion =             '0.12.5'
-    nativeLoaderVersion =      '0.3.0'
+    nativeLoaderVersion =      '0.5.0'
     prometheusVersion =        '0.9.0'
     sentryVersion =            '1.7.30'
     vertxWebVersion =          '3.9.3'
@@ -78,7 +78,7 @@ dependencies {
 
     //Audio filters
     compile "com.github.natanbc:lavadsp:$lavadspVersion"
-    //override the native loader version lavadsp uses
+    //Native library loading
     compile "com.github.natanbc:native-loader:$nativeLoaderVersion"
 
     //Native send system
