--- a/api/build.gradle
+++ b/api/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     api "io.vertx:vertx-web:$vertxWebVersion"
 
     //Audio player
-    api "com.github.Devoxin:lavaplayer:$lavaplayerVersion"
+    api("com.github.Devoxin:lavaplayer:$lavaplayerVersion") {
+        exclude group: 'com.sedmelluq', module: 'lavaplayer-natives'
+    }
 
     //Audio filters
     api "com.github.natanbc:lavadsp:$lavadspVersion"
@@ -89,7 +91,7 @@ bintray {
     pkg {
         repo = 'maven'
         name = 'andesite-api'
-        licenses = ['MIT']
+        licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/natanbc/andesite-node.git'
         publish = true
         version {
