--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ ext {
     koeVersion =          '64b28abee9'
     nettyEpollVersion =   '4.1.52.Final'
     nettyKQueueVersion =  '4.1.52.Final'
-    lavaplayerVersion =   '1.3.59'
+    lavaplayerVersion =   '1.3.53'
     lpcrossVersion =      '0.1'
     ytRotatorVersion =    '0.1.7'
-    lavadspVersion =      '0.7.1'
+    lavadspVersion =      '0.7.2'
     logbackVersion =      '1.2.3'
     magmaVersion =        '0.12.5'
     nativeLoaderVersion = '0.6.0'
@@ -72,7 +72,7 @@ dependencies {
     compile "io.netty:netty-transport-native-kqueue:$nettyKQueueVersion:osx-x86_64"
 
     //Audio player
-    compile("com.github.Devoxin:lavaplayer:$lavaplayerVersion") {
+    compile("com.sedmelluq:lavaplayer:$lavaplayerVersion") {
         exclude group: 'com.sedmelluq', module: 'lavaplayer-natives'
     }
     compile "com.github.natanbc:lp-cross:$lpcrossVersion"
