--- a/musl/Dockerfile
+++ b/musl/Dockerfile
@@ -18,6 +18,10 @@ RUN apk add --no-cache openjdk15-jdk openjdk15-jmods jattach --repository http:/
     mkdir logs && \
     chown -R andesite:andesite logs
 
+RUN jrt/bin/java -Xshare:dump && \
+    jrt/bin/java -XX:ArchiveClassesAtExit=app.jsa -jar andesite.jar cds && \
+    rm -rf /tmp/* logs/*
+
 USER andesite
 
-CMD ["jrt/bin/java", "-Djdk.tls.client.protocols=TLSv1,TLSv1.1,TLSv1.2", "-jar", "andesite.jar"]
+CMD ["jrt/bin/java", "-XX:SharedArchiveFile=app.jsa", "-Djdk.tls.client.protocols=TLSv1,TLSv1.1,TLSv1.2", "-jar", "andesite.jar"]
